pipes/error.log
cc -std=c99 -D_XOPEN_SOURCE=600 -D_DEFAULT_SOURCE -g -I../lib -pedantic -Wall -W -Wmissing-prototypes -Wno-sign-compare -Wimplicit-fallthrough -Wno-unused-parameter    fifo_seqnum_server.c ../libtlpi.a   -o fifo_seqnum_server
fifo_seqnum_server.c: In function ‘main’:
fifo_seqnum_server.c:80:9: error: ‘reqp’ undeclared (first use in this function); did you mean ‘resp’?
         reqp.seqNum = seqNum;
         ^~~~
         resp
fifo_seqnum_server.c:80:9: note: each undeclared identifier is reported only once for each function it appears in
make: *** [<builtin>: fifo_seqnum_server] Error 1
